tests/extensions/forLoops/valid/forPrintsLoopBackwards.wacc
# Prints i having each line in single line.

# Output:
# 7
# 6
# 5
# 4
# 3
# 2
# 1
# 0

begin
	for (int i = 7; i >= 0 ; i = i - 1) do
		println i 
	done
end