tests/extensions/forLoops/syntaxErr/forBadExit.wacc
# error -> i > 'a'

# Output:
# semantic_error

# Exit:
# 100

begin
  for (int i = 0; i < 'a'; exit 201) do
    skip
  done
end